--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "json-server": "^0.16.1",
     "object-hash": "^2.0.3",
     "prop-types": "^15.7.2",
+    "query-string": "^6.13.1",
     "react": "^16.13.1",
     "react-bootstrap": "^1.3.0",
     "react-dom": "^16.13.1",
