--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "axios": "^0.20.0",
     "bootstrap": "^4.5.2",
     "json-server": "^0.16.1",
     "object-hash": "^2.0.3",
@@ -17,6 +18,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
     "react-slick": "^0.27.3",
+    "reactjs-popup": "^1.5.0",
     "styled-components": "^5.1.1"
   },
   "scripts": {
